--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Naslov</h1>
     <h2>Promjena naslova</h2>
     <p>Novo</p>
+    <p> Drugi tekst sa remote repozitorija </p>
     /body>
 </html>
